--- a/index.html
+++ b/index.html
@@ -43,24 +43,51 @@
         color: #fff; 
     }
 
-      #messages { 
+      #message { 
         list-style-type: none; 
         margin: 0; 
         padding: 0; 
     }
-      #messages > li { 
+      #message > li { 
         padding: 0.5rem 1rem; 
     }
-      #messages > li:nth-child(odd) { 
+      #message > li:nth-child(odd) { 
         background: #efefef; 
     }
     </style>
 </head>
+<script src="/socket.io/socket.io.js"></script>
+
 <body>
     <ul id="message"></ul>
-    <form id="form" action="">
+    <form id="form" >
         <input id="input" autocomplete="off">
         <button>Send</button>
     </form>
 </body>
+<script >
+    const socket = io();
+    const messages = document.getElementById('message');
+    const form = document.getElementById('form');
+    const input = document.getElementById('input');
+
+    form.addEventListener('submit', (e) => {
+        e.preventDefault();
+        if (input.value){
+            socket.emit('chat message', input.value)
+            input.value = ''
+        }
+    })
+
+    socket.on('chat message', (msg) => {
+        console.log('message: ' + msg)
+        const item = document.createElement('li')
+        item.textContent = msg
+        messages.appendChild(item)
+        window.scrollTo(0, document.body.scrollHeight) // scroll to bottom
+         
+    })
+
+
+</script>
 </html>
